force-app/main/default/objects/Beat__c/fields/Beat_Id__c.field-meta.xml
<CustomField>
    <fullName>Beat_Id__c</fullName>
    <displayFormat>BA - {00000}</displayFormat>
    <label>Beat Id</label>
    <type>AutoNumber</type>
</CustomField>