force-app/main/default/objects/Beat__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <formula>IF(
    ISBLANK(Employee_Name__c),
    &quot;No Employee Assigned&quot;,
   Employee_Name__r.EmployeeNumber 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Code</label>
    <type>Text</type>
</CustomField>