force-app/main/default/objects/Beat__c/fields/Number_Of_Retailers__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Retailers__c</fullName>
    <label>Number Of Retailers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>