force-app/main/default/objects/Beat__c/fields/Retailer_Location_Update__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Location_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retailer Location Update</label>
    <type>Checkbox</type>
</CustomField>