force-app/main/default/objects/Beat__c/fields/T_code__c.field-meta.xml
<CustomField>
    <fullName>T_code__c</fullName>
    <label>T code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>