force-app/main/default/objects/Beat__c/recordTypes/Active_Beats.recordType-meta.xml
<RecordType>
    <fullName>Active_Beats</fullName>
    <active>true</active>
    <label>Active Beats</label>
</RecordType>