force-app/main/default/objects/Beat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Territory__c</columns>
    <columns>Distributor_Name__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
    </filters>
    <label>All</label>
</ListView>