force-app/main/default/objects/Beat__c/listViews/My_Beat.listView-meta.xml
<ListView>
    <fullName>My_Beat</fullName>
    <columns>NAME</columns>
    <columns>Territory__c</columns>
    <columns>Distributor_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Beat</label>
</ListView>